fix(editor): broken layout of file and image browsers

--- a/packages/default/scss/editor/_layout.scss
+++ b/packages/default/scss/editor/_layout.scss
@@ -320,6 +320,7 @@
             margin: 0 0 $spacer-y 0;
             padding: $padding-y $padding-x;
             border-top-width: 0;
+            overflow: auto;
         }
     }
 
